# ku-fpg.github.io

./: .gitignore  BibTeX.hs  Gemfile  LICENSE  README.md  Shake.hs  XXX  _config.yml  about.md  blog.md  events.md  feed.xml  index.html  index.md  ku-fpg-github-io.cabal  md  media.md  practice.md  publications.md  research.md  software.md  stack.yaml  theory.md
_data/: navbar.yml  publications.yml  sidebar.yml
_drafts/: 2015-08-07-remote-monad-part-1.md  remote-json.md
_includes/: cite.fn  footer.html  head.html  header.html  menu.html  navbar.html  navbar.md  recent.fn  sidebar.fn  sidebar.html  sidebar.md  teaser.fn
_layouts/: blank-page.html  blank.html  default.html  publication.html  qr-html-368.html  qr-html-776.html  qr-html.html
_meta/: bibtex.bib
_posts/: 2014-07-18-welcome-to-jekyll.markdown  2015-06-07-new-papers.md  2015-07-19-new-papers.md  2015-12-10-remote-monad-part-1.md  2016-02-09-remote-json.md
concepts/: DSLs.md
css/: main.css
files/: Reasoning-with-the-HERMIT-1.tgz  Reasoning-with-the-HERMIT-2.tgz  Reasoning-with-the-HERMIT-3.tgz  Reasoning-with-the-HERMIT-4.tgz  Reasoning-with-the-HERMIT-5.tgz  chalk.20200129.js
js/: aframe-frp.js
papers/: Adams-14-OSIE.md  Adams-15-OSTIE.md  Async08.md  Austin-15-ProofPlugin.md  Avoid92.md  Bracker-14-Sunroof.md  Bull-09-ITC.md  Bull-11-FECandFP.md  Dawson-17-RemoteMonad.md  Farmer-10-WhatsTheMatter.md  Farmer-12-HERMITinMachine.md  Farmer-12-WebDSLs.md  Farmer-14-HERMITinStream.md  Farmer-15-HERMIT-reasoning.md  Farmer-15-PhD.md  Farmer-15-ToolSupportEquationalReasoning.md  GhciDebugger07.md  (+67 more)
(+66 files in other folders)
