Name:                fpg-web-github-io
Version:             0.1
Synopsis:            Web pages for FPG group using jakyll
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Executable Shake
  Main-is:             Shake.hs
  Other-modules:       BibTeX
  Ghc-options:         -threaded
  Build-depends:       base >= 4.6 && < 5.0,
                       directory >= 1.2,
                       shake >= 0.10,
                       old-locale >= 1.0.0.5,
                       time >= 1.4.0.1,
                       bibtex >= 0.1.0.4,
                       parsec >= 3.1.9,
                       hashable >= 1.2,
                       binary >= 0.7.1,
                       deepseq >= 1.3,
                       process >= 1.2
